Add extension point for sys file validations
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>